--- a/src/style.css
+++ b/src/style.css
@@ -1,35 +1,38 @@
 body {
-  background-color: rgb(216, 224, 231);
+  background-color: rgb(238, 242, 247);
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
   padding: 5px;
   margin-top: 50px;
-  width: 50%;
+  width: 40%;
   min-width: 250px;
   background-color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  height: 43px;
+  box-shadow: 4px 3px 3px 3px rgb(201, 196, 196);
 }
-
 .recycle {
   padding: 10px;
 }
 
 .boxshadow {
   padding: 5px;
-  width: 50%;
+  width: 40%;
   min-width: 250px;
   border: 1px solid rgb(190, 188, 188);
-  box-shadow: 5px 5px 5px 5px rgb(201, 196, 196);
+  box-shadow: 3px 3px 3px 3px rgb(201, 196, 196);
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 
 .inputform {
@@ -38,20 +41,34 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  height: 43px;
 }
 
 #todo-input {
   width: 100%;
+  height: 35px;
+  border: none;
+  border-bottom: 1px solid rgb(199, 196, 196);
 }
-
 #submit {
   cursor: pointer;
+  border: none;
+  border-bottom: 1px solid rgb(199, 196, 196);
+  background-color: white;
+  height: 38px;
 }
 
 .clear {
   cursor: pointer;
+  color: grey;
+  width: 102%;
+  height: 40px;
+  background-color: rgb(238, 242, 247);
+  margin: 0;
+  margin-bottom: -5px;
+  text-align: center;
+  padding-top: 30px;
 }
-
 #totallist {
   width: 100%;
   display: flex;
@@ -66,7 +83,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding-right: 10px;
-  height: 25px;
+  height: 43px;
   border-bottom: 1px solid rgb(199, 196, 196);
 }
 
